# fifth-semester

./: .gitignore  README.md  project.xml  visualParadigmProject.xml
Ex1/: Ex1.pro  car.cpp  car.h
Lab1/: CMakeLists.txt
Lab1/Ex1Task1/: Person.cpp  Person.h  Student.cpp
Lab1/Ex1Task2/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.h  Dog.cpp  Dog.h  main.cpp
Lab10/: index.php
Lab10/klasy/: website.php
Lab10/skrypty/: formularz.php
Lab10Prep_Timers/: Lab10Prep.hzp  Lab10Prep.hzs
Lab10Timers/: Zadanie2.txt
Lab10Timers/Zadanie2/: Zadanie2.hzp
Lab10Timers/Zadanie6/: main.c  main.c.bak
Lab10Timers/Zadanie_na_5/: PCF8833U8_lcd.h
Lab10_Timers/: Zadanie3.txt  Zadanie4.txt
Lab10_Timers/Zadanie2/: Zadanie2.hzs  main.c  main.c.bak
Lab10_Timers/Zadanie5/: Zadanie5.hzp  Zadanie5.hzs  main.c.bak
Lab10_Timers/Zadanie6/: Zadanie6.hzp
Lab10_Timers/Zadanie_na_5/: Zadanie_na_5.hzs  main.c  main.c.bak
Lab11/: indexOld.php
Lab12/Ex2/: Car.h  (+3 more)
Lab12_ADC/: lcd.c
Lab13Prep_PWM/: ex3.txt
Lab1_LED/: Lab1_LED.aps  lab1_led.aws  main.c
Lab2_KeypadAndLED_Drivers/: First.aps  first.aws  led.c  snakeConfig.xml  snakeConfig.xml.bak
Lab3/: Ex1.swift
Lab3Prep_LCD_Driver/: basicLCDconf.xml  main.c
Lab3and4_LCD_DRIVER/: LCD.h
Lab5Prep_InterruptsAndTimers/: main.c
Lab5_InterruptsAndTimers/: main.c
Lab6/: index.php
Lab6Prep_USART/: main.c
Lab7/Ex2/: CMakeLists.txt  main.cpp
Lab7/Ex3/: CMakeLists.txt  main.cpp  window.cpp  window.h
Lab7/Test2/: CMakeLists.txt
Lab7/Test3/: CMakeLists.txt
Lab7/Test4/: CMakeLists.txt  cokolwiek.cpp  cokolwiek.h  cokolwiek.ui
Lab8/: testLogin.php
Lab8Prep_SAM7/: Test1.hzp  Test1.hzs
Lab8_SAM7/: Skic_Marcin_Lab_8.hzp  Skic_Marcin_Lab_8.hzs
Lab9/: DirTrav.php  css.php  inclusion.php  polaczenie.php  skrypt.txt  sql.php
Lab9Prep_LCD/: Lab9Prep.hzs  main.c
Lab9ProofOfConcept/: main.c
Lab9_LCD/: Lab9.hzp
Test1/: CMakeLists.txt  PracDydaktyczny.cpp  PracDydaktyczny.h  PracNaukowy.cpp  Pracownik.cpp  Pracownik.h
Test2/: Car.h  ExG3B.h
adv-oop-in-cpp/: README.md
adv-software-engineering/: README.md
ai-in-python/: README.md
basics-swift/: README.md
embedded-systems/: README.md
web-apps-in-php/: .gitignore  README.md
(+442 files in other folders)
